--- a/src/app/modules/supplier-portal/views/offer-form/offer-form.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/offer-form.component.html
@@ -14,7 +14,7 @@
     <app-negotiators [sectionData]="offerData.sections.negotiators" [offerStatusData]="offerData.formStatus"></app-negotiators>
     <app-available-offerings [sectionData]="offerData.sections.availableOfferings" [offerStatusData]="offerData.formStatus"></app-available-offerings>
     <app-standard-responses [sectionData]="offerData.sections.standardResponses" [offerStatusData]="offerData.formStatus"></app-standard-responses>
-    <app-solicitaion-clauses [sectionData]="offerData.sections.solicitationClauses" [offerStatusData]="offerData.formStatus"></app-solicitaion-clauses>
+    <app-solicitation-clauses [sectionData]="offerData.sections.solicitationClauses" [offerStatusData]="offerData.formStatus"></app-solicitation-clauses>
     <app-solicitation-provisions [sectionData]="offerData.sections.solicitationProvisions" [offerStatusData]="offerData.formStatus"></app-solicitation-provisions>
     <app-exceptions [sectionData]="offerData.sections.exceptions" [offerStatusData]="offerData.formStatus"></app-exceptions>
     <app-upload-documents [sectionData]="offerData.sections.uploadDocuments" [offerStatusData]="offerData.formStatus"></app-upload-documents>
