--- a/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/corporate-information/corporate-information.component.html
@@ -1,235 +1,258 @@
 <app-form-card [sectionState]="sectionData" *ngIf="sectionData.showSection">
-    <ng-template #formCardActions>
-        <ng-container [ngTemplateOutlet]="sectionActions"></ng-container>
-    </ng-template>
-    <ng-template #formCardBody>
-        <ng-container [ngTemplateOutlet]="readonlySection"></ng-container>
-    </ng-template>
+	<ng-template #formCardActions>
+		<ng-container [ngTemplateOutlet]="sectionActions"></ng-container>
+	</ng-template>
+	<ng-template #formCardBody>
+		<ng-container [ngTemplateOutlet]="readonlySection"></ng-container>
+	</ng-template>
 </app-form-card>
 
 <!-- Readonly Section -->
 <ng-template #readonlySection>
-<form id="corporateInformation">
-    <div class="usa-alert usa-alert-warning mb-4">
-    	<div class="usa-alert-body">
-	        <p>
-	            <b>Is the information correct?</b>
-	        </p>
-	        <p>
-	            This information is taken directly from <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. If any of this information is incorrect, it must be corrected through <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. Any changes will be reflected in eOffer in approximately 24 hours.
-	        </p>
-	    </div>  
-    </div>
+	<form id="corporateInformation">
 
-    <div class="row px-5">
-    	<div class="col-lg-8">
-    		<h4 class="type1">Company Details</h4>
-    		<p>UEI Number: DN1AKEH8VZU7<br />
-    		Type of Organization: Corporate Entity (Not Tax Exempt)<br />
-    		Common Parent UEI Number: -<br />
-    		Company Name: NOMADIC DISPLAY CAPITOL INC<br />
-    		Doing Business As (DBA): NOMADIC DISPLAY<br />
-    		Business Type(s) Registered in SAM: For-Profit Organization, Manufacturer of Goods<br />
-    		Business Website: www.nomadicdisplay.com
-    		</p>
-    		
-    	</div>
-    	<div class="col-lg">
-	    	<div class="col-lg">
-	    		<h4 class="type1">Company Address</h4>
-	    		<address>
-	    			10505 FURNACE RD STE 108<br />
-	    			LORTON, VA 22079-2635<br />
-	    			USA
-	    		</address>
-	    	</div>
-	    	<div class="col-lg">
-	    		<h4 class="type1">Mailing Address</h4>
-	    		<address>
-	    			10505 FURNACE RD STE 108<br />
-	    			LORTON, VA 22079-2635<br />
-	    			USA
-	    		</address>
-	    	</div>
-	    </div>
-    </div>
+		<div class="col-12">
+			<h2 class="h4 border-bottom mb-3">Company Details</h2>
+		</div>
+		<div class="row mb-4">
+			<div class="col-md-6">
+				<dt class="col">UEI Number:</dt>
+				<dd class="col">DN1AKEH8VZU7</dd>
 
-	<form id="saveAndContinueAction" name="editForm" action="https://eoffer-test.fas.gsa.gov/eOffer/saveAndContinueAction.do" method="post">
-		<input type="hidden" name="token" value="null">
-		<input type="hidden" name="method" value="saveAndContinue" id="saveAndContinueAction_method">
-		<input type="hidden" name="pageName" value="corporateInformation" id="saveAndContinueAction_pageName">
+				<dt class="col">Common Parent UEI Number:</dt>
+				<dd class="col">-</dd>
+
+				<dt class="col">Company Name:</dt>
+				<dd class="col">NOMADIC DISPLAY CAPITOL INC</dd>
+
+				<dt class="col">Doing Business As (DBA):</dt>
+				<dd class="col">NOMADIC DISPLAY</dd>
+			</div>
+
+			<div class="col-md-6">
+				<dt class="col">Type of Organization:</dt>
+				<dd class="col">Corporate Entity (Not Tax Exempt)</dd>
+
+				<dt class="col">Business Type(s) Registered in SAM:</dt>
+				<dd class="col">For-Profit Organization, Manufacturer of Goods</dd>
+
+				<dt class="col">Business Website:</dt>
+				<dd class="col">www.nomadicdisplay.com</dd>
+			</div>
+		</div>
+		<div class="row m-0 p-0">
+			<div class="col-sm-6">
+				<h2 class="h4 border-bottom mb-3">Company Address</h2>
+				<div class="row">
+					<div class="col-lg">
+						<address>
+							10505 FURNACE RD STE 108<br />
+							LORTON, VA 22079-2635<br />
+							USA
+						</address>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6">
+				<h2 class="h4 border-bottom mb-3">Mailing Address</h2>
+				<div class="row">
+					<div class="col-lg">
+						<address>
+							10505 FURNACE RD STE 108<br />
+							LORTON, VA 22079-2635<br />
+							USA
+						</address>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<form id="saveAndContinueAction" name="editForm"
+			action="https://eoffer-test.fas.gsa.gov/eOffer/saveAndContinueAction.do" method="post">
+			<input type="hidden" name="token" value="null">
+			<input type="hidden" name="method" value="saveAndContinue" id="saveAndContinueAction_method">
+			<input type="hidden" name="pageName" value="corporateInformation" id="saveAndContinueAction_pageName">
+		</form>
+
+
+
 	</form>
-
-
-
-</form>
 </ng-template>
 
 
 <!-- Edit Section -->
 <ng-template #editSection>
-<form id="corporateInformation">
-    <div class="usa-alert usa-alert-warning mb-4">
-    	<div class="usa-alert-body">
-	        <p>
-	            <b>Is the information correct?</b>
-	        </p>
-	        <p>
-	            This information is taken directly from <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. If any of this information is incorrect, it must be corrected through <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. Any changes will be reflected in eOffer in approximately 24 hours.
-	        </p>
-	    </div>
-        
-    </div>
-    <div class="corset">
-		<h4 class="type1">Company Details</h4>
-		<table id="corpDUNS" class="table table-responsive table-flush" role="presentation">
-			<tbody><tr>
-				<td class="first" width="40%">UEI Number:</td>
-				<td width="60%">
-					DN1AKEH8VZU7
-				</td>
-			</tr>
-			<tr>
-				<td class="first">Type of Organization:</td>
-				<td class="camel">
-					Corporate Entity (Not Tax Exempt)
-				</td>
-			</tr>
-			<tr>
-				<td class="first">Common Parent UEI Number:</td>
-				<td>
-					
-				</td>
-			</tr>
-			<tr>
-				<td class="first">Company Name:</td>
-				<td class="camel">NOMADIC DISPLAY CAPITOL INC</td>
-			</tr>
-			<tr>
-				<td class="first">Doing Business As (DBA):</td>
-				<td class="camel">NOMADIC DISPLAY</td>
-			</tr>
-			<tr>
-				<td class="first">Business Type(s) Registered in SAM: </td>
-				<td class="camel">
-					For-Profit Organization, Manufacturer of Goods.
-				</td>
-			</tr>
-			
-			<tr>
-				<td class="first">Business Website:</td>
-				<td class="alllow">
-					www.nomadicdisplay.com
-				</td>	
-			</tr>
-		</tbody></table>
+	<form id="corporateInformation">
+		<div class="usa-alert usa-alert-warning mb-4">
+			<div class="usa-alert-body">
+				<p>
+					<strong>Is the information correct?</strong>
+				</p>
+				<p>
+					This information is taken directly from <a href="http://www.sam.gov/" target="_blank">System for
+						Award Management (SAM)</a>. If any of this information is incorrect, it must be corrected
+					through <a href="http://www.sam.gov/" target="_blank">System for Award Management (SAM)</a>. Any
+					changes will be reflected in eOffer in approximately 24 hours.
+				</p>
+			</div>
 
-		 
-		<h4 class="type1">Company Address</h4>
-		<table id="corpAddress" class="table table-responsive table-flush w-100" role="presentation">
-			
-			<tr>
-				<td class="first" width="40%">Street1:</td>
-				<td width="60%" class="camel">
-					10505 FURNACE RD STE 108
-				</td>
-			</tr>
-			<tr>
-				<td class="first">Street2:</td>
-				<td class="camel"></td>
-			</tr>
-			<tr>
-				<td class="first">City:</td>
-				<td class="camel">LORTON</td>
-			</tr>
-			<tr>
-				<td class="first">State:</td>
-				<td class="allcap">VA</td>
-			</tr>
-			<tr>
-				<td class="first">Zip/Postal Code:</td>
-				<td>220792635</td>
-			</tr>
-			<tr>
-				<td class="first">Country:</td>
-				<td class="camel">USA</td>
-			</tr>
-		</table>
+		</div>
+		<div class="corset">
+			<h4 class="type1">Company Details</h4>
+			<table id="corpDUNS" class="table table-responsive table-flush" role="presentation">
+				<tbody>
+					<tr>
+						<td class="first" width="40%">UEI Number:</td>
+						<td width="60%">
+							DN1AKEH8VZU7
+						</td>
+					</tr>
+					<tr>
+						<td class="first">Type of Organization:</td>
+						<td class="camel">
+							Corporate Entity (Not Tax Exempt)
+						</td>
+					</tr>
+					<tr>
+						<td class="first">Common Parent UEI Number:</td>
+						<td>
 
-		 
-		<h4 class="type1">Mailing Address</h4>
-		<table class="table table-responsive table-flush" role="presentation">
-			
-			<tbody><tr>
-				<td class="first" width="40%">Company Name:</td>
-				<td width="60%" class="camel">NOMADIC DISPLAY CAPITOL INC</td>
-			</tr>
-			<tr>
-				<td class="first">Street1:</td>
-				<td class="camel">10505 FURNACE RD STE 108</td>
-			</tr>
-			<tr>
-				<td class="first">Street2:</td>
-				<td class="camel"></td>
-			</tr>
-			<tr>
-				<td class="first">City:</td>
-				<td class="camel">LORTON</td>
-			</tr>
-			<tr>
-				<td class="first">State:</td>
-				<td class="allcap">VA</td>
-			</tr>
-			<tr>
-				<td class="first">Zip/Postal Code:</td>
-				<td>220792635</td>
-			</tr>
-			<tr>
-				<td class="first">Country:</td>
-				<td class="camel">USA</td>
-			</tr>
-		</tbody></table>
-	</div>
+						</td>
+					</tr>
+					<tr>
+						<td class="first">Company Name:</td>
+						<td class="camel">NOMADIC DISPLAY CAPITOL INC</td>
+					</tr>
+					<tr>
+						<td class="first">Doing Business As (DBA):</td>
+						<td class="camel">NOMADIC DISPLAY</td>
+					</tr>
+					<tr>
+						<td class="first">Business Type(s) Registered in SAM: </td>
+						<td class="camel">
+							For-Profit Organization, Manufacturer of Goods.
+						</td>
+					</tr>
 
-	<form id="saveAndContinueAction" name="editForm" action="https://eoffer-test.fas.gsa.gov/eOffer/saveAndContinueAction.do" method="post">
-		<input type="hidden" name="token" value="null">
-		<input type="hidden" name="method" value="saveAndContinue" id="saveAndContinueAction_method">
-		<input type="hidden" name="pageName" value="corporateInformation" id="saveAndContinueAction_pageName">
-			</form>
+					<tr>
+						<td class="first">Business Website:</td>
+						<td class="alllow">
+							www.nomadicdisplay.com
+						</td>
+					</tr>
+				</tbody>
+			</table>
 
 
+			<h4 class="type1">Company Address</h4>
+			<table id="corpAddress" class="table table-responsive table-flush w-100" role="presentation">
 
-</form>
+				<tr>
+					<td class="first" width="40%">Street1:</td>
+					<td width="60%" class="camel">
+						10505 FURNACE RD STE 108
+					</td>
+				</tr>
+				<tr>
+					<td class="first">Street2:</td>
+					<td class="camel"></td>
+				</tr>
+				<tr>
+					<td class="first">City:</td>
+					<td class="camel">LORTON</td>
+				</tr>
+				<tr>
+					<td class="first">State:</td>
+					<td class="allcap">VA</td>
+				</tr>
+				<tr>
+					<td class="first">Zip/Postal Code:</td>
+					<td>220792635</td>
+				</tr>
+				<tr>
+					<td class="first">Country:</td>
+					<td class="camel">USA</td>
+				</tr>
+			</table>
+
+
+			<h4 class="type1">Mailing Address</h4>
+			<table class="table table-responsive table-flush" role="presentation">
+
+				<tbody>
+					<tr>
+						<td class="first" width="40%">Company Name:</td>
+						<td width="60%" class="camel">NOMADIC DISPLAY CAPITOL INC</td>
+					</tr>
+					<tr>
+						<td class="first">Street1:</td>
+						<td class="camel">10505 FURNACE RD STE 108</td>
+					</tr>
+					<tr>
+						<td class="first">Street2:</td>
+						<td class="camel"></td>
+					</tr>
+					<tr>
+						<td class="first">City:</td>
+						<td class="camel">LORTON</td>
+					</tr>
+					<tr>
+						<td class="first">State:</td>
+						<td class="allcap">VA</td>
+					</tr>
+					<tr>
+						<td class="first">Zip/Postal Code:</td>
+						<td>220792635</td>
+					</tr>
+					<tr>
+						<td class="first">Country:</td>
+						<td class="camel">USA</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+
+		<form id="saveAndContinueAction" name="editForm"
+			action="https://eoffer-test.fas.gsa.gov/eOffer/saveAndContinueAction.do" method="post">
+			<input type="hidden" name="token" value="null">
+			<input type="hidden" name="method" value="saveAndContinue" id="saveAndContinueAction_method">
+			<input type="hidden" name="pageName" value="corporateInformation" id="saveAndContinueAction_pageName">
+		</form>
+
+
+
+	</form>
 </ng-template>
 
 
 <!-- Actions-->
 <ng-template #sectionActions>
 
-    <app-modal *ngIf="offerStatus == 'In Progress'" 
-    [config]="{ modalTitle: sectionData.name, showDefaultOpenButton: true, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
-        <ng-template #modalBody>
-            <ng-container [ngTemplateOutlet]="editSection"></ng-container>
-        </ng-template>
-        <ng-template #modalFooter>
-            <input type="button" value="Save and Continue" id="saveAndContinue" class="btn btn-primary" (click)="saveForm()">
-            <input type="button" value="Cancel" id="cancel" class="btn btn-default" (click)="closeModal()">
-        </ng-template>
-    </app-modal>
+	<app-modal *ngIf="offerStatus == 'In Progress'"
+		[config]="{ modalTitle: sectionData.name, showDefaultOpenButton: true, defaultOpenButtonLabel: 'Edit', showDefaultCloseButton: false, modalSize: 'xl' }">
+		<ng-template #modalBody>
+			<ng-container [ngTemplateOutlet]="editSection"></ng-container>
+		</ng-template>
+		<ng-template #modalFooter>
+			<input type="button" value="Save and Continue" id="saveAndContinue" class="btn btn-primary"
+				(click)="saveForm()">
+			<input type="button" value="Cancel" id="cancel" class="btn btn-default" (click)="closeModal()">
+		</ng-template>
+	</app-modal>
 
-    <span *ngIf="offerStatus == 'Awarded'" class="btn-group" dropdown>
-        <button id="button-manage" dropdownToggle type="button" class="btn btn-default btn-lg dropdown-toggle p-1 m-0"
-            aria-controls="dropdown-manage">
-            <span class="gsa-light-blue">Actions</span>
-            <span class="caret"></span>
-        </button>
-        <ul id="dropdown-manage" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
-            aria-labelledby="button-basic">
-            <li role="menuitem"><a class="dropdown-item">Create New Modification</a></li>
-            <li role="menuitem"><a class="dropdown-item">View Modification History</a></li>
-            <li role="menuitem"><a class="dropdown-item">Show Clarification History</a></li> 
-        <!-- <li role="menuitem"><a class="dropdown-item">Lookup Tables</a></li>  -->
-        </ul>
-    </span>
+	<span *ngIf="offerStatus == 'Awarded'" class="btn-group" dropdown>
+		<button id="button-manage" dropdownToggle type="button" class="btn btn-default btn-lg dropdown-toggle p-1 m-0"
+			aria-controls="dropdown-manage">
+			<span class="gsa-light-blue">Actions</span>
+			<span class="caret"></span>
+		</button>
+		<ul id="dropdown-manage" *dropdownMenu class="dropdown-menu dropdown-menu-right" role="menu"
+			aria-labelledby="button-basic">
+			<li role="menuitem"><a class="dropdown-item">Create New Modification</a></li>
+			<li role="menuitem"><a class="dropdown-item">View Modification History</a></li>
+			<li role="menuitem"><a class="dropdown-item">Show Clarification History</a></li>
+			<!-- <li role="menuitem"><a class="dropdown-item">Lookup Tables</a></li>  -->
+		</ul>
+	</span>
 
 </ng-template>
