--- a/src/app/modules/supplier-portal/views/offer-form/exceptions/exceptions.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/exceptions/exceptions.component.html
@@ -1,4 +1,4 @@
-<app-form-card [sectionState]="sectionData" *ngIf="sectionData.showSection">
+<app-form-card [sectionState]="sectionData" [sectionStatus]="sectionData.sectionStatus" *ngIf="sectionData.showSection">
     <ng-template #formCardActions>
         <ng-container [ngTemplateOutlet]="sectionActions"></ng-container>
     </ng-template>
