--- a/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/solicitation-clauses.component.html
+++ b/src/app/modules/supplier-portal/views/offer-form/solicitation-clauses/solicitation-clauses.component.html
@@ -1,4 +1,4 @@
-<app-form-card [sectionState]="sectionData" *ngIf="sectionData.showSection">
+<app-form-card [sectionState]="sectionData" [sectionStatus]="sectionData.sectionStatus" *ngIf="sectionData.showSection">
     <ng-template #formCardActions>
         <ng-container [ngTemplateOutlet]="sectionActions"></ng-container>
     </ng-template>
@@ -11,117 +11,10 @@
 <!-- Readonly Section -->
 <ng-template #readonlySection>
     <form id="solicitationClauses">
-
-        <div class="col">
-            <h2 class="h4 border-bottom mb-3">Basic information</h2>
-        </div>
-        <div class="col mb-5">
-
-            <accordion [isAnimated]="true" [closeOthers]="false" *ngFor="let section of subSections">
-                <app-form-accordion [config]="{ title: section.title, sectionStatus: sectionStatus, parentOfferStatus: offerStatus}" *ngIf="true">
-                    <!-- <ng-template #formAccordionHeader>
-                        <ng-container [ngTemplateOutlet]="basicInformationActions"></ng-container>
-                    </ng-template> -->
-                    <ng-template #formAccordionBody>
-                        <ng-temlpate [ngComponentOutlet]="section.component"></ng-temlpate>
-                    </ng-template>
-                </app-form-accordion>
-            </accordion>
-            
-        </div>
-        <ng-template #basicInformationActions>
-            <button class="btn btn-default">Test</button>
-        </ng-template>
-        
-        <ng-template #basicInformationContent>
-            Basic Information
-        </ng-template>
-
-        <div class="col">
-            <h2 class="h4 border-bottom mb-5">Commercial Sales Practice</h2>
-        </div>
-<!-- 
-            <app-form-accordion [sectionData]="section" [offerStatusData]="offerStatus">
-              <ng-template #formAccordionBody>
-                <ng-temlpate [ngComponentOutlet]="section.component"></ng-temlpate>
-              </ng-template>
-            </app-form-accordion> -->
-<!-- 
-        <h4 id="clau" class="type1">Clauses</h4>
-        <table aria-labelledby="clau" class="table table-responsive table-bordered table-striped buttonsTable"
-            id="tempTable">
-            <thead>
-                <tr>
-                    <th width="40%" scope="col">
-                        Template Name
-                    </th>
-                    <th width="20%" scope="col">
-                        Status
-                    </th>
-                    <th width="10%" scope="col">
-                        Edit
-                    </th>
-                    <th width="10%" scope="col">
-                        Delete
-                    </th>
-                    <th width="10%" scope="col">
-                        Respond
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        Basic Information <span class="required">*</span></td>
-                    <td>
-                        Incomplete
-                    </td>
-                    <td></td>
-                    <td></td>
-                    <td class="tbl-button">
-                        <button type="button" class="btn btn-primary btn-sm"
-                            (click)="basicInformation.show()">Respond</button>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td>Commercial Sales Practice<span class="required"> *</span></td>
-                    <td>
-                        Incomplete
-                    </td>
-                    <td class="tbl-button"></td>
-                    <td class="tbl-button"></td>
-                    <td class="tbl-button"><a class="btn btn-primary btn-sm" title="Respond to Input"
-                            href="https://eoffer-test.fas.gsa.gov/eOffer/offerSolClauseAction.do?type=commercialsalespractice&amp;method=view">
-                            Respond
-                        </a></td>
-                </tr>
-                <tr>
-                    <td>
-                        Point of Contacts Information<span class="required"> *</span></td>
-                    <td>
-                        Incomplete
-                    </td>
-                    <td></td>
-                    <td></td>
-                    <td class="tbl-button"><a class="btn btn-primary btn-sm" title="Respond to Input"
-                            href="https://eoffer-test.fas.gsa.gov/eOffer/offerSolClauseAction.do?method=view&amp;type=pocInfo">Respond</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Ordering Information<span class="required"> *</span></td>
-                    <td>
-                        Incomplete
-                    </td>
-                    <td></td>
-                    <td></td>
-                    <td class="tbl-button"><a class="btn btn-primary btn-sm" title="Respond to Input"
-                            href="https://eoffer-test.fas.gsa.gov/eOffer/offerSolClauseAction.do?method=view&amp;type=orderInfo">Respond</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table> -->
+        <app-basic-information></app-basic-information>
+        <app-commercial-sales-practice></app-commercial-sales-practice>
+        <app-point-of-contacts></app-point-of-contacts>
+        <app-ordering-information></app-ordering-information>
     </form>
 </ng-template>
 
